tests/snapshots/generate_plan_tests__bun_web_server.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "bun",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "bun i --no-save"
      ],
      "cacheDirectories": [
        "/root/.bun"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "bun index.ts"
  }
}
