tests/snapshots/generate_plan_tests__clojure.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "clojure"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "lein uberjar; if [ -f /app/target/uberjar/*standalone.jar ]; then  mv /app/target/uberjar/*standalone.jar /app/target/*standalone.jar; fi"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "leiningen",
        "jdk8"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "bash -c \"java $JAVA_OPTS -jar /app/target/*standalone.jar\""
  }
}
