tests/snapshots/generate_plan_tests__cobol.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "cobol"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "cobc -x -o index index.cbl"
      ]
    },
    "setup": {
      "name": "setup",
      "aptPkgs": [
        "gnucobol",
        "gcc"
      ]
    }
  },
  "start": {
    "cmd": "./index"
  }
}
